--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
